Update Lost Item Form GBK.html

--- a/Lost Item Form GBK.html
+++ b/Lost Item Form GBK.html
@@ -650,6 +650,13 @@ function showError(msg) {
     setTimeout(() => alert.classList.remove('active'), 5000);
 }
 </script>
+    <script>
+const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzu-3H7ft85dlHuRriZcuupdAjnMBx1xtRRGMLad5g/exec';
+
+function showError(msg) {
+  const alert = document.getElementById('errorAlert');
+  alert.textContent = msg
+
 
 </body>
 </html>
