Update Lost Item Form GBK.html

--- a/Lost Item Form GBK.html
+++ b/Lost Item Form GBK.html
@@ -552,5 +552,10 @@
             e.target.value = value;
         });
     </script>
+    // Form submission - SCRIPT BARU (ANTI CORS)
+form.addEventListener('submit', async function(e) {
+    e.preventDefault();
+    
+    submitBtn.disabled
 </body>
 </html>
