--- a/found index.html
+++ b/found index.html
@@ -556,20 +556,29 @@
             submitBtn.disabled = true;
             submitBtn.textContent = 'Mengirim...';
 
-            // In real implementation, send to backend/Google Sheets API
-            setTimeout(() => {
-                console.log('Form Data:', formData);
-                
-                // Show success
-                form.style.display = 'none';
-                successMessage.classList.add('active');
-                
-                // Store in localStorage for demo
-                const existingData = JSON.parse(localStorage.getItem('foundItems') || '[]');
-                existingData.push(formData);
-                localStorage.setItem('foundItems', JSON.stringify(existingData));
-            }, 1500);
-        });
+           // KIRIM KE GOOGLE SHEET
+submitBtn.disabled = true;
+submitBtn.textContent = '⏳ Mengirim...';
+
+const params = new URLSearchParams(formData).toString();
+const scriptURL = 'https://script.google.com/macros/s/AKfycbzRxrpDRB8mQK3W2ZQ4YZ3y5yxcly-jPLeQbmPgS5ZClthbiW2zOTJTZmrVy5_pA1TG/exec';
+
+fetch(scriptURL + '?' + params, {
+    method: 'GET',
+    mode: 'no-cors'
+})
+.then(() => {
+    console.log('✅ Berhasil dikirim ke GSheet');
+    form.style.display = 'none';
+    successMessage.classList.add('active');
+})
+.catch(error => {
+    console.error('❌ Error:', error);
+    showError('Gagal mengirim data. Coba lagi.');
+    submitBtn.disabled = false;
+    submitBtn.textContent = 'Kirim Laporan / Submit Report';
+});
+
 
         function showError(message) {
             errorAlert.textContent = message;
