--- a/Lost Item Form GBK.html
+++ b/Lost Item Form GBK.html
@@ -499,20 +499,21 @@
 
             // Collect form data
             const formData = {
-                timestamp: new Date().toISOString(),
-                formType: 'LOST',
-                name: document.getElementById('name').value,
-                phone: document.getElementById('phone').value,
-                idNumber: idNumber,
-                itemType: document.getElementById('itemType').value,
-                description: document.getElementById('description').value,
-                lastLocation: document.getElementById('lastLocation').value,
-                latitude: latitudeInput.value || 'Tidak ada',
-                longitude: longitudeInput.value || 'Tidak ada',
-                lostDateTime: document.getElementById('lostDateTime').value || 'Tidak diisi',
-                additionalInfo: document.getElementById('additionalInfo').value || 'Tidak ada',
-                photoUploaded: photoInput.files.length > 0 ? 'Ya' : 'Tidak'
-            };
+    timestamp: new Date().toISOString(),
+    formType: 'FOUND',
+    name: document.getElementById('name').value,
+    phone: document.getElementById('phone').value,
+    idNumber: document.getElementById('idNumber').value,
+    itemType: document.getElementById('itemType').value,
+    description: document.getElementById('description').value,
+    lastLocation: document.getElementById('lastLocation').value,
+    latitude: document.getElementById('latitude').value || 'Tidak ada',
+    longitude: document.getElementById('longitude').value || 'Tidak ada',
+    lostDateTime: document.getElementById('foundDateTime').value || '',
+    additionalInfo: document.getElementById('additionalInfo').value || '',
+    photoUploaded: document.getElementById('itemPhoto').files.length > 0 ? 'Ya' : 'Tidak'
+};
+
 
             // Simulate submission
             submitBtn.disabled = true;
