Update Lost Item Form GBK.html

--- a/Lost Item Form GBK.html
+++ b/Lost Item Form GBK.html
@@ -588,6 +588,12 @@
             }
             e.target.value = value;
         });
+        <script>
+// === GBK LOST FORM - COMPLETE WORKING SCRIPT ===
+document.addEventListener('DOMContentLoaded', function() {
+    
+    const form
+
     </script>
 </body>
 </html>
