--- a/lost.html
+++ b/lost.html
@@ -151,74 +151,82 @@
     </div>
   </div>
 
-  <script>
-    const form = document.getElementById('lostForm');
-    const submitBtn = document.getElementById('submitBtn');
-    const successMessage = document.getElementById('successMessage');
-    const getLocationBtn = document.getElementById('getLocationBtn');
-    const locationInfo = document.getElementById('locationInfo');
-    const locationText = document.getElementById('locationText');
-    const photoInput = document.getElementById('itemPhoto');
+<script>
+  const form = document.getElementById('lostForm');
+  const submitBtn = document.getElementById('submitBtn');
+  const successMessage = document.getElementById('successMessage');
+  const getLocationBtn = document.getElementById('getLocationBtn');
+  const locationInfo = document.getElementById('locationInfo');
+  const locationText = document.getElementById('locationText');
+  const photoInput = document.getElementById('itemPhoto');
 
-    getLocationBtn.addEventListener('click', function() {
-      if (navigator.geolocation) {
-        getLocationBtn.disabled = true;
-        getLocationBtn.textContent = '⏳ Loading...';
-        navigator.geolocation.getCurrentPosition(
-          function(pos) {
-            document.getElementById('latitude').value = pos.coords.latitude;
-            document.getElementById('longitude').value = pos.coords.longitude;
-            locationText.textContent = pos.coords.latitude.toFixed(6) + ', ' + pos.coords.longitude.toFixed(6);
-            locationInfo.classList.add('active');
-            getLocationBtn.textContent = '✅ Lokasi Didapat';
-            getLocationBtn.style.background = '#10b981';
-          },
-          function() {
-            getLocationBtn.disabled = false;
-            getLocationBtn.textContent = '📍 Dapatkan Lokasi';
-            alert('Gagal mendapatkan lokasi');
-          }
-        );
-      }
-    });
+  // (opsional) kalau mau auto-set default datetime, tambahkan ini:
+  // const now = new Date();
+  // now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
+  // document.getElementById('lostDateTime').value = now.toISOString().slice(0, 16);
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
-      submitBtn.disabled = true;
-      submitBtn.textContent = 'Mengirim...';
+  getLocationBtn.addEventListener('click', function() {
+    if (navigator.geolocation) {
+      getLocationBtn.disabled = true;
+      getLocationBtn.textContent = '⏳ Loading...';
+      navigator.geolocation.getCurrentPosition(
+        function(pos) {
+          document.getElementById('latitude').value = pos.coords.latitude;
+          document.getElementById('longitude').value = pos.coords.longitude;
+          locationText.textContent = pos.coords.latitude.toFixed(6) + ', ' + pos.coords.longitude.toFixed(6);
+          locationInfo.classList.add('active');
+          getLocationBtn.textContent = '✅ Lokasi Didapat';
+          getLocationBtn.style.background = '#10b981';
+        },
+        function() {
+          getLocationBtn.disabled = false;
+          getLocationBtn.textContent = '📍 Dapatkan Lokasi';
+          alert('Gagal mendapatkan lokasi');
+        }
+      );
+    }
+  });
 
-      const data = {
-        timestamp: new Date().toISOString(),
-        formType: 'LOST',
-        name: document.getElementById('name').value,
-        phone: document.getElementById('phone').value,
-        idNumber: document.getElementById('idNumber').value,
-        itemType: document.getElementById('itemType').value,
-        description: document.getElementById('description').value,
-        lastLocation: document.getElementById('lastLocation').value,
-        lostDateTime: document.getElementById('lostDateTime').value,
-        latitude: document.getElementById('latitude').value,
-        longitude: document.getElementById('longitude').value,
-        photoUploaded: photoInput.files.length > 0 ? 'Ya' : 'Tidak'
-      };
+  form.addEventListener('submit', function(e) {
+    e.preventDefault();
+    submitBtn.disabled = true;
+    submitBtn.textContent = 'Mengirim...';
 
-      const params = new URLSearchParams(data).toString();
-   const url = 'https://script.google.com/macros/s/AKfycbzfmkBNVZfH70IjYHkN6p8XuqzGWAtMsYCblvVzCL7CV-hSDUMoW_07Y2rGsOURnu4h/exec';
-      
-      fetch(url + '?' + params, { method: 'GET', mode: 'no-cors' })
-        .then(() => {
-          form.style.display = 'none';
-          successMessage.classList.add('active');
-          setTimeout(() => {
-            window.location.href = 'https://sayawni.github.io/gbk-lost-found/';
-          }, 3000);
-        })
-        .catch(() => {
-          submitBtn.disabled = false;
-          submitBtn.textContent = 'Kirim Laporan';
-          alert('Gagal mengirim. Coba lagi.');
-        });
-    });
-  </script>
+    const data = {
+      timestamp: new Date().toISOString(),
+      formType: 'LOST',
+      name: document.getElementById('name').value,
+      phone: document.getElementById('phone').value,
+      idNumber: document.getElementById('idNumber').value,
+      itemType: document.getElementById('itemType').value,
+      description: document.getElementById('description').value,
+      lastLocation: document.getElementById('lastLocation').value,
+      lostDateTime: document.getElementById('lostDateTime').value,  
+      latitude: document.getElementById('latitude').value,
+      longitude: document.getElementById('longitude').value,
+      photoUploaded: photoInput.files.length > 0 ? 'Ya' : 'Tidak'
+    };
+
+    const params = new URLSearchParams(data).toString();
+
+    // PAKAI URL SAMA DENGAN FOUND YANG SUDAH BERHASIL
+    const url = 'https://script.google.com/macros/s/AKfycbzAb5NYVc3HF8ozmX6OA_wIwd-nJlz2JR7_-g-DIX9vxdXqRNPpZxtIbYKjTQv0mNU/exec';
+
+    fetch(url + '?' + params, { method: 'GET', mode: 'no-cors' })
+      .then(() => {
+        form.style.display = 'none';
+        successMessage.classList.add('active');
+        setTimeout(() => {
+          window.location.href = 'https://sayawni.github.io/gbk-lost-found/';
+        }, 3000);
+      })
+      .catch(() => {
+        submitBtn.disabled = false;
+        submitBtn.textContent = 'Kirim Laporan';
+        alert('Gagal mengirim. Coba lagi.');
+      });
+  });
+</script>
+
 </body>
 </html>
