--- a/lost.html
+++ b/lost.html
@@ -119,10 +119,13 @@
           </select>
         </div>
         
-        <div class="form-group">
-          <label class="form-label">Tanggal Kehilangan <span class="required">*</span></label>
-        <input type="datetime-local" class="form-input" id="lostDateTime" required>
+       <div class="form-group">
+  <label class="form-label">Tanggal Kehilangan <span class="required">*</span></label>
+  <input type="datetime-local" class="form-input" id="lostDateTime" required>
 </div>
+
+<div class="form-group">
+  <label class="form-label">Lokasi GPS</label>
         
         <div class="form-group">
           <label class="form-label">Lokasi GPS</label>
@@ -217,7 +220,7 @@
         form.style.display = 'none';
         successMessage.classList.add('active');
         setTimeout(() => {
-          window.location.href = 'https://sayawni.github.io/gbk-lost-found/';
+          window.location.href = 'https://ops-stack-pr.github.io/gbk-lost-found/';
         }, 3000);
       })
       .catch(() => {
@@ -226,6 +229,12 @@
         alert('Gagal mengirim. Coba lagi.');
       });
   });
+  <script>
+  const form = document.getElementById('lostForm');
+  const submitBtn = document.getElementById('submitBtn');
+  const successMessage = document.getElementById('successMessage');
+  const getLocationBtn = document.getElementById('getLocationBtn');
+  const locationInfo =
 </script>
 
 </body>
