--- a/lost.html
+++ b/lost.html
@@ -122,19 +122,14 @@
        <div class="form-group">
   <label class="form-label">Tanggal Kehilangan <span class="required">*</span></label>
   <input type="datetime-local" class="form-input" id="lostDateTime" required>
-</div>
-
 <div class="form-group">
-  <label class="form-label">Lokasi GPS</label>
-        
-        <div class="form-group">
-          <label class="form-label">Lokasi GPS</label>
-          <button type="button" class="btn btn-location" id="getLocationBtn">📍 Dapatkan Lokasi</button>
-          <div class="location-info" id="locationInfo"><span id="locationText"></span></div>
-          <input type="hidden" id="latitude">
-          <input type="hidden" id="longitude">
-        </div>
-        
+  <label class="form-label">Lokasi GPS <span class="required">*</span></label>
+  <button type="button" class="btn btn-location" id="getLocationBtn">📍 Dapatkan Lokasi</button>
+  <div class="location-info" id="locationInfo"><span id="locationText"></span></div>
+  <input type="hidden" id="latitude" required>
+  <input type="hidden" id="longitude" required>
+  <p class="help-text">Klik tombol GPS untuk mengisi lokasi secara otomatis</p>
+</div>  
         <div class="form-group">
           <label class="form-label">Upload Foto Barang</label>
           <input type="file" class="form-input" id="itemPhoto" accept="image/*" style="padding:8px;">
@@ -189,11 +184,22 @@
       );
     }
   });
-
-  form.addEventListener('submit', function(e) {
-    e.preventDefault();
-    submitBtn.disabled = true;
-    submitBtn.textContent = 'Mengirim...';
+form.addEventListener('submit', function(e) {
+  e.preventDefault();
+  
+  // VALIDASI GPS WAJIB
+  const lat = document.getElementById('latitude').value;
+  const lon = document.getElementById('longitude').value;
+  if (!lat || !lon) {
+    alert('Lokasi GPS wajib diisi! Klik tombol 📍 Dapatkan Lokasi');
+    return;
+  }
+  
+  submitBtn.disabled = true;
+  submitBtn.textContent = 'Mengirim...';
+  
+  // ... rest of code
+});
 
     const data = {
       timestamp: new Date().toISOString(),
