--- a/lost.html
+++ b/lost.html
@@ -218,10 +218,17 @@
         method: 'POST',
         body: JSON.stringify(data)
       })
-        .then(res => res.json())
+       .then(res => res.json())
         .then(result => {
           if (result.status === 'success') {
             form.style.display = 'none';
+            
+            // Append to existing content
+            successMessage.innerHTML = `
+              <p>Laporan Anda berhasil dikirim!</p>
+              <p class="disclaimer">Pihak PPKGBK memfasilitasi pencarian barang, namun tidak bertanggung jawab atas kehilangan atau menjamin penemuan kembali item yang dilaporkan.</p>
+            `;
+            
             successMessage.classList.add('active');
             setTimeout(() => { window.location.href = 'https://ops-stack-pr.github.io/gbk-lost-found/'; }, 3000);
           } else {
