--- a/lost.html
+++ b/lost.html
@@ -197,7 +197,8 @@
 
       const data = {        formType: 'LOST',
         name: document.getElementById('name').value,
-        phone: document.getElementById('phone').value,        itemType: document.getElementById('itemType').value,
+        phone: document.getElementById('phone').value,        
+        itemType: document.getElementById('itemType').value,
         description: document.getElementById('description').value,
         lastLocation: document.getElementById('lastLocation').value,
         lostDateTime: document.getElementById('lostDateTime').value,
