--- a/lost.html
+++ b/lost.html
@@ -195,17 +195,21 @@
         });
       }
 
-      const data = {        formType: 'LOST',
-        name: document.getElementById('name').value,
-        phone: document.getElementById('phone').value,        
-        itemType: document.getElementById('itemType').value,
-        description: document.getElementById('description').value,
-        lastLocation: document.getElementById('lastLocation').value,
-        lostDateTime: document.getElementById('lostDateTime').value,
-        latitude: document.getElementById('latitude').value,
-        longitude: document.getElementById('longitude').value,
-        photoBase64: photoBase64
-      };
+      const data = {
+  formType: 'LOST',
+  name: document.getElementById('name').value,
+  phone: document.getElementById('phone').value,
+  itemType: document.getElementById('itemType').value,
+  description: document.getElementById('description').value,
+  lastLocation: document.getElementById('lastLocation').value,
+  lostDateTime: document.getElementById('lostDateTime').value,
+  latitude: document.getElementById('latitude').value,
+  longitude: document.getElementById('longitude').value,
+  photoBase64: photoBase64,
+  PIC: '',   
+  STATUS: ''   
+};
+
 
       fetch(SCRIPT_URL, {
         method: 'POST',
